updates for new persistence